kubernetes/apps/stockalert/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockalert
  namespace: stockalert
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: >-
      192.168.1.0/24,100.64.0.0/10
spec:
  ingressClassName: nginx
  tls:
    - hosts: [stockalert.lab.skyhaven.ltd]
      secretName: stockalert-tls
  rules:
    - host: stockalert.lab.skyhaven.ltd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stockalert
                port:
                  number: 8080
